--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 .then((userCredential) => {
                     document.getElementById("login-msg").innerText = "Login successful!";
                     setTimeout(() => {
-                        window.location.href = "index.html"; // Redirect to home page
+                        window.location.href = "home.html"; // Redirect to home page
                     }, 1500);
                 })
                 .catch((error) => {
